fix: update to .toList() method